- Cellars at level -1 didn't correctly connect to adjacent corridors in Z direction
- Fixed a problem with heightmaps being stored with bytes. But worldheight no longer fits in a byte. This could cause worldgen issues
- Made borders below buildings and streets only go as deep as needed. This means that you will no longer have ugly borders going down into caves from buildings on top of it

@TODO setBlocksFromPalette

1.18-5.2.3:
- It's now possible to use random block palettes for streets too
- Big speed improvement in the Lost City profile selection screen when rendering the world preview
- Saplings in Lost City parks will generate trees again
- 'cityChance' now has double precision which makes it possible to make cities even more rare
- More expansions to the lost city api
- Fixed a problem with corridor generation. Too often it resulted in floating rails
- Fixed redstone torches not being correctly lit

1.18-5.2.2:
- New method in the API to load additional assets
- New API so that other mods can add custom profiles
- Chests could float if the building around it was destroyed by explosions

1.18-5.2.1:
- New createbuilding command to create a building
- Fixes in chest generation and lighting updates
- Fixed a potential race conditions with mods using the Lost Cities API

1.18-5.2.0:
- Another optimization on worldgen
- Fixed a problem with connecting walls and glass slabs that got broken in the previous release
- Fixed a bug in the explosion correction code
- Much better explosion damage propagation upwards so that there is less floating geometry
- Code cleanups and small fixes
- New feature where a building can override the palette used by the parts
- Added 3 new building types using that feature with more modern building blocks
- Fixed placement of torches

1.18-5.1.2:
- Much more stable way to generate the Lost City chunks. No more worldgen warnings and tallbuildings profile works again