@@ -3,6 +3,7 @@ package mcjty.lostcities.worldgen.lost;
 import mcjty.lostcities.varia.ChunkCoord;
 import mcjty.lostcities.worldgen.IDimensionInfo;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.Holder;
 import net.minecraft.world.level.biome.Biome;
 
 import java.util.HashMap;
@@ -12,7 +13,7 @@ public class BiomeInfo {
 
     private static final Map<ChunkCoord, BiomeInfo> biomeInfoMap = new HashMap<>();
 
-    private Biome mainBiome;
+    private Holder<Biome> mainBiome;
 
     public static void cleanCache() {
         biomeInfoMap.clear();
@@ -24,15 +25,12 @@ public class BiomeInfo {
             int chunkX = coord.chunkX();
             int chunkZ = coord.chunkZ();
             info.mainBiome = provider.getBiome(new BlockPos((chunkX << 4) + 8, 65, (chunkZ << 4) + 8));
-            if (info.mainBiome == null) {
-                System.out.println("BiomeInfo.getBiomeInfo");
-            }
             biomeInfoMap.put(coord, info);
         }
         return biomeInfoMap.get(coord);
     }
 
-    public Biome getMainBiome() {
+    public Holder<Biome> getMainBiome() {
         return mainBiome;
     }
 }
